# cryptomarketdata

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  codecov.yml  compile_commands.json  conan_profile  conan_profile_mac  conanfile.txt
.github/workflows/: build-master.yml
examples/tradeplt/: CMakeLists.txt  compile_commands.json  main.cxx  windows.hxx
src/: exchange_connect.hxx  exchange_eventbus.hxx  main.cxx  marketdata.hxx  utils.hxx
src/exchanges/: binance.hxx  coinbase.hxx  kraken.hxx
tests/: main.cxx
